2008-03-16  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.h:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.h:
	* src/BuzzMachineLoader/BuzzMachineVirtualCallbacks.cpp:
	* src/BuzzMachineLoader/MachineDataImpl.h:
	* src/BuzzMachineLoader/Makefile.am:
	* src/BuzzMachineLoader/mdkimp.cpp:
	* src/BuzzMachineLoader/windows_compat.h:
	* src/Makefile.am:
	* src/bml.h:
	* src/bmltest_info.c:
	  Cleanup the repository. Fix some build scenarios. Export channel
	  configuration.

2008-03-13  Stefan Kost  <ensonic@users.sf.net>

	* README:
	* src/BuzzMachineLoader/mdk.h:
	  Formatting.

	* src/bmltest_process.c:
	  Some comments about creating testdata.

2008-03-12  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.h:
	* src/BuzzMachineLoader/Makefile.am:
	* src/BuzzMachineLoader/mdk.h:
	* src/BuzzMachineLoader/mdkimp.cpp:
	* src/BuzzMachineLoader/mdkimp.h:
	  Add and use mdk implementation.

2008-03-12  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Update test findings.

	* dllwrapper1/wine/pe_image.c:
	  Some tracing fixes.

2008-03-11  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/BuzzMDKHelper.cpp:
	* src/BuzzMachineLoader/BuzzMDKHelper.h:
	* src/BuzzMachineLoader/CMachine.h:
	  Remove try{} catch. Always call AttributesChanged during init.
	  A bit of MDK work.

2008-03-10  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* src/BuzzMachineLoader/MachineInterface.h:
	* src/BuzzMachineLoader/Makefile.am: